[package]
name = "parng"
version = "0.1.0"
build = "build.rs"

[lib]
name = "parng"
path = "lib.rs"

[dependencies]
byteorder = "0.4"
clap = "2.0"
libc = "0.2"
num = "0.1"
time = "0.1"

[build-dependencies]
gcc = "0.3"

[dependencies.rayon]
git = "https://github.com/nikomatsakis/rayon.git"

[dependencies.zlib-ng-sys]
git = "https://github.com/pcwalton/zlib-ng-sys"

[[example]]
name = "example"
path = "example.rs"

