[package]
name = "parng"
version = "0.1.0"
build = "build.rs"

[lib]
name = "parng"
path = "lib.rs"
crate-type = ["rlib", "dylib"]

[features]
default = []
bench = ["stb_image"]

[dependencies]
byteorder = "0.4"
libc = "0.2"
libz-sys = "1.0"
time = "0.1"

[dependencies.stb_image]
version = "0.2"
optional = true

[build-dependencies]
gcc = "0.3"

[[example]]
name = "example"
path = "example.rs"

[[example]]
name = "bench"
path = "bench.rs"

